yeet i have 16 octopi on my hair

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>YouTube Downloader</title>
-    <link rel="stylesheet" href="/static/normalise.css">
-    <link rel="stylesheet" href="/static/style.css">
+{#    <link rel="stylesheet" href="/static/normalise.css">#}
+{#    <link rel="stylesheet" href="/static/style.css">#}
+    <link rel="stylesheet" href="/static/government/govuk-frontend-4.7.0.min.css">
 </head>
 <body>
+{% include "header.html" %}
 <main class="container">{% block content %}{% endblock %}</main>
+<script>
+    document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
+</script>
+<script src="/static/government/govuk-frontend-4.7.0.min.js"></script>
+<script>
+    window.GOVUKFrontend.initAll()
+</script>
 </body>
 </html>
