--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
             >
               <span class="govuk-header__logotype">
                 <span class="govuk-header__logotype-text">
-                  <img src="/static/rosanna.jpg" alt="The face of Rosanna, a happy customer with a very square head">
+                  {% include "rosanna.html" %}
                     <!-- Replace this with a crown -->
                   GCHQ.NET
                 </span>
