--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,13 @@
         <input required autofocus autocomplete="off" type="url" name="v" id="url" class="rounded-rect url" /><input type="submit" class="sumbit rounded-rect" value="Download" />
     </form>
 </div>
-<marquee class="outer" direction="down" behavior="alternate" scrolldelay="15" truespeed="" scrollamount="2">
-    <marquee class="inner" behavior="alternate" scrolldelay="15" scrollamount="3" truespeed="">
+{#<marquee class="outer" direction="down" behavior="alternate" scrolldelay="15" truespeed="" scrollamount="2">#}
+{#    <marquee class="inner" behavior="alternate" scrolldelay="15" scrollamount="3" truespeed="">#}
         <div class="six">
             <img src="/static/rosanna.jpg" alt="The face of Rosanna, a happy customer with a very square head">
         </div>
-    </marquee>
-</marquee>
+{#    </marquee>#}
+{#</marquee>#}
 
 {#    <q>100% safe and virus free!</q>#}
 {% endblock %}
