--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-{% include "phase-banner.html" %}
-<h1>YouTube Downloader</h1>
-<div style="margin-bottom: 2rem">
-    <form action="/" method="get">
-        <label for="url">Put the YouTube link here:&nbsp;</label>
-        <input required autofocus autocomplete="off" type="url" name="v" id="url" class="rounded-rect url" /><input type="submit" class="sumbit rounded-rect" value="Download" />
-    </form>
-</div>
-{#<marquee class="outer" direction="down" behavior="alternate" scrolldelay="15" truespeed="" scrollamount="2">#}
-{#    <marquee class="inner" behavior="alternate" scrolldelay="15" scrollamount="3" truespeed="">#}
-        <div class="six">
-            <img src="/static/rosanna.jpg" alt="The face of Rosanna, a happy customer with a very square head">
-        </div>
-{#    </marquee>#}
-{#</marquee>#}
-
-{#    <q>100% safe and virus free!</q>#}
+    <h1 class="govuk-heading-xl">Download a video from YouTube</h1>
+    <p class="govuk-body">Use this service to download a video or audio track from YouTube.</p>
+    <a href="/download-video" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+    Start now
+     <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+    </svg></a>
+{#    <div class="six">#}
+{#        <img src="/static/rosanna.jpg" alt="The face of Rosanna, a happy customer with a very square head">#}
+{#    </div>#}
+    <!--<q>100% safe and virus free!</q>-->
 {% endblock %}
